--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,14 @@ authors = ["DaNubCoding"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "==3.12.*"
 pygame-ce = "^2.5.2"
 multipledispatch = "^1.0.0"
 pyperclip = "^1.9.0"
 pytweening = "^1.2.0"
 opensimplex = "^0.4.5.1"
 websockets = "^13.1"
+pyinstaller = "^6.11.0"
 
 
 [build-system]
