--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,36 @@
-name: Build for Windows
+name: windows-build
 
 on:
   push:
-    branches: [main]
+    branches: [master]
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout branch
+      - name: checkout-branch
         uses: actions/checkout@v3
 
-      - name: Install Python
+      - name: installe-python
         uses: actions/setup-python@v4
         with:
           python-version: "3.12.6"
 
-      - name: Install Poetry
+      - name: install-poetry
         run: |
           python -m pip install --upgrade pip
           pip install poetry
 
-      - name: Install dependencies
+      - name: install-deps
         run: |
           poetry install
 
-      - name: Build
+      - name: build-exe
         run: |
           poetry run pyinstaller main.spec
 
-      - name: Upload build artifacts
+      - name: upload-artifacts
         uses: actions/upload-artifact@v3
         with:
           name: windows-executable
