--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - name: checkout-branch
         uses: actions/checkout@v4
 
-      - name: installe-python
+      - name: install-python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12.6"
