--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [master]
 
 jobs:
-  build:
+  build-windows:
     runs-on: windows-latest
 
     steps:
@@ -19,6 +19,7 @@ jobs:
 
       - name: install-poetry
         run: |
+          python -m pip install --upgrade pip
           pip install poetry
 
       - name: install-deps
