--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: windows-build
+name: build-executables
 
 on:
   push:
@@ -34,4 +34,35 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: windows-executable
-          path: dist/main.exe
+          path: dist/blizzard-bash-windows-x64.exe
+
+  build-macos:
+    runs-on: macos-latest
+
+    steps:
+      - name: checkout-branch
+        uses: actions/checkout@v4
+
+      - name: install-python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12.6"
+
+      - name: install-poetry
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+
+      - name: install-deps
+        run: |
+          poetry install
+
+      - name: build-exe
+        run: |
+          poetry run pyinstaller main.spec
+
+      - name: upload-artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-executable
+          path: dist/blizzard-bash-macos-x64
