--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: build-exe
         run: |
-          poetry run pyinstaller main.spec
+          poetry run pyinstaller build.spec
 
       - name: upload-artifacts
         uses: actions/upload-artifact@v4
@@ -59,7 +59,7 @@ jobs:
 
       - name: build-exe
         run: |
-          poetry run pyinstaller main.spec
+          poetry run pyinstaller build.spec
 
       - name: upload-artifacts
         uses: actions/upload-artifact@v4
