--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,5 @@
 [tool.poetry]
+package-mode = false
 name = "blizzard-bash"
 version = "0.1.0"
 description = "Blizzard Bash game."
@@ -6,7 +7,7 @@ authors = ["DaNubCoding"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "==3.12.*"
+python = "==3.13.*"
 pygame-ce = "^2.5.2"
 multipledispatch = "^1.0.0"
 pyperclip = "^1.9.0"
